Implemented discrete funtions for home assistant commands. Implemented a first version of a Media content class, which provides the functionality, which is needed for the home assistant media browser. WIP

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "venv/bin/python3.9",
+    "python.pythonPath": "/usr/local/bin/python3",
     "editor.rulers": [80,88]
 }
