refactor: Use ruff and uv, drop no longer needed old dev dependencies and remove deprecated functions

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -8,3 +8,9 @@ cache_dir = .cache/mypy/
 
 [mypy-aiomusiccast.pyamaha]
 ignore_errors = true
+
+[mypy-aiomusiccast.musiccast_device]
+ignore_errors = true
+
+[mypy-aiomusiccast.capability_registry]
+ignore_errors = true
