--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Publish (Test PyPI)
 
 on:
   release:
@@ -10,17 +10,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.8'
-    - name: Install dependencies
+        python-version: "3.12"
+    - name: Install uv toolchain
       run: |
         python -m pip install --upgrade pip
-        pip install poetry
-    - name: Build and publish
-      run: |
-        poetry version $(git describe --tags --abbrev=0)
-        poetry build
-        poetry publish --username ${{ secrets.PYPI_USERNAME }} --password ${{ secrets.PYPI_TOKEN }}
+        python -m pip install uv hatch
+    - name: Sync dependencies
+      run: uv sync --locked
+    - name: Set project version from tag
+      run: uv run hatch version "$(git describe --tags --abbrev=0)"
+    - name: Build distribution
+      run: uv build
+    - name: Publish to Test PyPI
+      env:
+        UV_PUBLISH_TOKEN: ${{ secrets.TEST_PYPI_TOKEN }}
+      run: uv publish --repository-url https://test.pypi.org/legacy/
