--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,75 +1,67 @@
-[tool.poetry]
+[build-system]
+requires = ["hatchling>=1.25.0"]
+build-backend = "hatchling.build"
 
+[project]
 name = "aiomusiccast"
-version = "0.0.0" # Version is automatically filled by github action.
+version = "0.0.0"  # Version is automatically filled by GitHub action.
 description = "Companion library for musiccast devices intended for the Home Assistant integration."
-
-license = "MIT"
-
-authors = ["Tom Schneider <mail@vigonotion.com>"]
-
 readme = "README.md"
-
-homepage = "https://pypi.org/project/aiomusiccast"
-documentation = "https://aiomusiccast.readthedocs.io"
-repository = "https://github.com/vigonotion/aiomusiccast"
-
-keywords = [
-]
+license = { file = "LICENSE.md" }
+authors = [{ name = "Tom Schneider", email = "mail@vigonotion.com" }]
+requires-python = ">=3.10"
+keywords = []
 classifiers = [
-    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
     "Development Status :: 1 - Planning",
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+]
+dependencies = [
+    "aiohttp>=3.9",
 ]
 
-[tool.poetry.dependencies]
+[project.urls]
+Homepage = "https://pypi.org/project/aiomusiccast"
+Documentation = "https://aiomusiccast.readthedocs.io"
+Repository = "https://github.com/vigonotion/aiomusiccast"
 
-python = "^3.8"
-aiohttp = "^3.7.4"
+[dependency-groups]
+dev = [
+    "ipython>=8.24.0",
+    "mkdocs>=1.5.3",
+    "mypy>=1.8.0",
+    "pygments>=2.15.0",
+    "ruff>=0.5.0",
+]
+docs = [
+    "mkdocs>=1.5.3",
+    "pygments>=2.15.0",
+]
 
-[tool.poetry.dev-dependencies]
+[tool.ruff]
+line-length = 120
+target-version = "py310"
 
-# Formatters
-black = "=20.8b1"
-isort = "=5.5.1"
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
 
-# Linters
-mypy = "*"
-pydocstyle = "*"
-pylint = "~2.6.0"
+[tool.ruff.lint]
+extend-select = [
+    "B",
+    "I",
+    "UP",
+]
+ignore = [
+    "E501",
+]
 
-# Testing
-pytest = "^5.3.2"
-pytest-cov = "*"
-pytest-describe = { git = "https://github.com/pytest-dev/pytest-describe", rev = "453aa9045b265e313f356f1492d8991c02a6aea6" } # use 2.0 when released
-pytest-expecter = "^2.1"
-pytest-random = "*"
-freezegun = "*"
-
-# Reports
-coveragespace = "^4.0"
-
-# Documentation
-mkdocs = "~1.0"
-pygments = "^2.5.2"
-
-# Tooling
-pyinstaller = "*"
-sniffer = "*"
-MacFSEvents = { version = "*", platform = "darwin" }
-pync = { version = "*", platform = "darwin" }
-ipython = "^7.12.0"
-
-[tool.black]
-
-target-version = ["py36", "py37", "py38"]
-skip-string-normalization = true
-
-[build-system]
-
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.ruff.lint.isort]
+combine-as-imports = true
