--- a/.mypy.ini
+++ b/.mypy.ini
@@ -3,6 +3,10 @@
 ignore_missing_imports = true
 no_implicit_optional = true
 check_untyped_defs = true
+show_error_codes = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_unreachable = true
 
 cache_dir = .cache/mypy/
 
