--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
       - id: docformatter
         name: docformatter
         language: system
-        entry: uv run --dev docformatter --in-place
+        entry: uv run --dev docformatter --config pyproject.toml --in-place
         types_or: [python]
         require_serial: true
   - repo: local
