ci: Fix build and publish action

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -2,14 +2,15 @@ name: Publish (PyPI)
 
 on:
   release:
+    types: [published]
 
 jobs:
   deploy:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # ensure tags are available for git describe
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
